Trazendo eventos as paginas novas

--- a/Desafio RocketCoffee/index.html
+++ b/Desafio RocketCoffee/index.html
@@ -20,22 +20,28 @@
           <img src="./assets/blur-1.png" />
         </div>
         <nav class="navbar">
-          <img
-            class="img-lista"
-            height="50px"
-            width="50px"
-            src="./assets/logo-desktop.svg"
-          />
+          <div class="logo">
+            <img
+              class="img-lista"
+              height="50px"
+              width="50px"
+              src="./assets/logo-desktop.svg"
+            />
+          </div>
+
           <ul>
             <li><a>Home</a></li>
             <li><a>Menu</a></li>
             <li><a>Recompensas</a></li>
-            <li><a>Giff Cards</a></li>
+            <li><a>Gift Cards</a></li>
             <li><a>Lojas</a></li>
             <li><a>Outros</a></li>
             <li><a>Trabalhe Conosco</a></li>
           </ul>
-          <button>PEGAR MEU CAFE</button>
+
+          <div class="botao">
+            <button onClick="main()">PEGAR MEU CAFE</button>
+          </div>
         </nav>
       </header>
 
