--- a/Pilotando com DOM/index03.html
+++ b/Pilotando com DOM/index03.html
@@ -9,6 +9,10 @@
   <body>
     <header>
       <h1 onClick="print()">click aqui</h1>
+
+      <input type="text" />
+
+      <h2>AddListeners</h2>
     </header>
   </body>
 
