--- a/Desafio RocketBlog/index.html
+++ b/Desafio RocketBlog/index.html
@@ -140,5 +140,95 @@
         </div>
       </div>
     </section>
+
+    <section class="mid">
+      <div class="elements-mid">
+        <div class="mid-left">
+          <div class="mid-image">
+            <img src="./assets/images/post-1.png" />
+
+            <p class="data">Janeiro 04, 2022</p>
+          </div>
+
+          <div class="mid-text">
+            <h2 class="title-bold">Começando no ReactJS em 2022</h2>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut alias
+              mollitia quaerat et quae facere animi similique eos dignissimos,
+              incidunt nesciunt ea omnis. Vero nam autem corporis. Nesciunt,
+              quaerat? Facere!
+            </p>
+          </div>
+        </div>
+
+        <div class="mid-right">
+          <p class="data">Janeiro 04, 2022</p>
+
+          <h2 class="title-bold">
+            Conheça as principais técnicas para conseguir uma vaga internacional
+            em programação
+          </h2>
+
+          <p class="lorem">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Consequuntur officia enim eaque voluptates fuga modi explicabo illum
+            eligendi incidunt cum? Sequi minus at, et placeat eiu.
+          </p>
+          <div class="mid-low">
+            <p class="data">Janeiro 04, 2022</p>
+
+            <h2 class="title-bold">Veja a evolução do Front-end na prática</h2>
+
+            <p class="lorem">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Voluptatum, animi veniam dignissimos iste.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="footer-images">
+        <div class="bloco">
+          <img src="./assets/images/post-2.png" />
+          <p class="data">Janeiro 04,2022</p>
+          <h2 class="title-bold">10 dicas para conseguir a vaga desejada</h2>
+          <p class="lorem">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+            eligendi error fuga? Facilis eum quis assumenda repellat enim rerum
+            ratione officiis. Ex dolorum illo id officiis veritatis, consequatur
+            at aut.
+          </p>
+        </div>
+
+        <div class="bloco">
+          <img src="./assets/images/post-3.png" />
+          <p class="data">Janeiro 04,2022</p>
+          <h2 class="title-bold">
+            Deixe seu código mais semântico com essas dicas
+          </h2>
+          <p class="lorem">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+            eligendi error fuga? Facilis eum quis assumenda repellat enim rerum
+            ratione officiis. Ex dolorum illo id officiis veritatis, consequatur
+            at aut.
+          </p>
+        </div>
+
+        <div class="bloco">
+          <img src="./assets/images/post-4.png" />
+          <p class="data">Janeiro 04,2022</p>
+          <h2 class="title-bold">Use essas dicas nas suas aplicações mobile</h2>
+          <p class="lorem">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+            eligendi error fuga? Facilis eum quis assumenda repellat enim rerum
+            ratione officiis. Ex dolorum illo id officiis veritatis, consequatur
+            at aut.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
