--- a/Desafio RocketBlog/index.html
+++ b/Desafio RocketBlog/index.html
@@ -54,20 +54,20 @@
               fill="white"
             />
           </svg>
+          <div class="nav-list">
+            <ul>
+              <li>Home</li>
+              <li>Sobre</li>
+              <li>Categorias</li>
+              <li>Contato</li>
+            </ul>
+          </div>
 
-          <ul>
-            <li>Home</li>
-            <li>Sobre</li>
-            <li>Categorias</li>
-            <li>Contato</li>
-          </ul>
           <div class="coletion">
             <input type="text" name="buscar" placeholder="Buscar" />
 
             <svg
               class="lupa"
-              width="24"
-              height="24"
               viewBox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -88,6 +88,7 @@
               />
             </svg>
           </div>
+          <button type="button" class="light">Light Transform</button>
         </navbar>
 
         <div class="main-topo">
@@ -230,5 +231,7 @@
         </div>
       </div>
     </section>
+
+    <script src="/scripts.js"></script>
   </body>
 </html>
