--- a/Desafio RocketCoffee/index.html
+++ b/Desafio RocketCoffee/index.html
@@ -16,9 +16,6 @@
   <body>
     <div class="pagina-main">
       <header>
-        <div class="bur-01">
-          <img src="./assets/blur-1.png" />
-        </div>
         <nav class="navbar">
           <div class="logo">
             <img
@@ -29,7 +26,7 @@
             />
           </div>
 
-          <ul>
+          <ul class="nav-list">
             <li><a>Home</a></li>
             <li><a>Menu</a></li>
             <li><a>Recompensas</a></li>
@@ -41,6 +38,12 @@
 
           <div class="botao">
             <button onClick="main()">PEGAR MEU CAFE</button>
+          </div>
+
+          <div class="mobile-menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
           </div>
         </nav>
       </header>
